--- a/index.html
+++ b/index.html
@@ -22,23 +22,38 @@
     <title>My_Portfolio</title>
 </head>
 
-<body>
-      <div class="bg-image" style="background-image: url('img/pic1.jpg'); height: 120vh; position: relative;">
-        <div class="row">
-          <div class="col-md-1 col-lg-2"></div>
-          <div class="col-md-4 col-lg-3"></div>
-          <div class="card col-md-6 col-lg-4 d-flex align-items-center mt-5 border-top border-5 border-dark">
-            <img src="img/propic.jpg" class="card-img-top rounded-circle mt-3 border border-5" style="width: 200px; height:200px;" alt="Los Angeles Skyscrapers"/>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-          </div>
-        </div>  
-      </div>
+<body class="bg-black">
+  <!-- Left side design -->
+  <div class="container m-0 bg-dark bg-gradient">
+    <!-- top profile  -->
+    <div class="col-md-4 bg-dark">
+       <div class="row mt-3">
+        <img src="img/propic.jpg" class="mx-auto mt-4" style="width: 120px; height:90px; border-radius:50%" alt="mypic">
+        <p class="text-center text-light mt-3 fs-5 mb-1">Win Htet Hlaing</p>
+        <p class="text-center text-muted mb-4">
+          Full-Stack Developer<br>Web/Business Application
+        </p>
+       </div>
+    </div>
+    <div class="col-md-4 bg-white data-mdb-smooth-scroll">
+      <ul class="list-group list-group-light ms-3" style="list-style-type: none;">
+        <li class="list-group-item d-flex justify-content-between">
+          <div>Residence : </div>
+          <span class="me-2">Myanmar</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <div>City : </div>
+          <span class="me-2">Yangon</span>
+        </li><li class="list-group-item d-flex justify-content-between">
+          <div>Age : </div>
+          <span class="me-2">27</span>
+        </li>
+        
+      </ul>
+      <hr>
+    </div>
+  </div>
+ 
 
     
 </body>
